--- a/po/pl.po
+++ b/po/pl.po
@@ -436,42 +436,40 @@ msgstr "Ogólne wzmocnienie feedback'u"
 msgid ""
 "Gain applied to spring effects. Higher values may produce more clipping."
 msgstr ""
-"Ganancia aplicada a los efectos de tipo muelle. Valores más altos pueden "
+"Wzmocnienie do efektu sprężyny. Większe wartości mogę powodować większe ucinanie."
 "producir saturación."
 
 #: oversteer/main.ui:1858
 msgid "Spring effect gain"
-msgstr "Ganancia efecto muelle"
+msgstr "Wzmocnienie efektu sprężyny"
 
 #: oversteer/main.ui:1899
 msgid ""
 "Gain applied to damper effects. Higher values may produce more clipping."
 msgstr ""
-"Ganancia aplicada a los efectos de amortiguación. Valores más altos pueden "
-"producir más saturación."
+"Wzmocnienie stosowane do efektu tłumienia. Większe wartości mogą powodować większe ucinanie."
 
 #: oversteer/main.ui:1907
 msgid "Damper effect gain"
-msgstr "Ganancia efecto amortigüación"
+msgstr "Wzmocnienie efektu tłumienia"
 
 #: oversteer/main.ui:1949
 msgid ""
 "Gain applied to friction effects. Higher values may produce more clipping."
 msgstr ""
-"Ganancia aplicada a los efectos de fricción. Valores más altos pueden "
-"producir más saturación."
+"Wzmocnienie stosowane do efektu oporu. Większe wartości mogą powodować większe ucinanie."
 
 #: oversteer/main.ui:1957
 msgid "Friction effect gain"
-msgstr "Ganancia efecto fricción"
+msgstr "Wzmocnienie efektu oporu"
 
 #: oversteer/main.ui:2010
 msgid "Continuous autocenter force strength."
-msgstr "Fuerza contínua de autocentrado."
+msgstr "Średnia moc siły autocentrowania"
 
 #: oversteer/main.ui:2018
 msgid "Autocenter strength"
-msgstr "Fuerza de autocentrado"
+msgstr "Moc autocentrowania"
 
 #: oversteer/main.ui:2067
 msgid "Force Feedback"
@@ -482,33 +480,32 @@ msgid ""
 "Center the wheel immediately after this option is enabled. Works also when "
 "setting it from a profile."
 msgstr ""
-"El volante se centra inmediatamente al activar esta opción. Funciona también "
-"al activarla desde un perfil."
+"Scentruj kierownicę  natychmiast gdy ta opcja jest włączona. Działa również gdy "
+"ustawia się z profilu."
 
 #: oversteer/main.ui:2106
 msgid "Center wheel"
-msgstr "Centrar volante"
+msgstr "Scentruj kierownicę"
 
 #: oversteer/main.ui:2141
 msgid "Start the companion application manually from the GUI."
-msgstr "Arranca la aplicación complementaria manualmente desde la IGU."
+msgstr "Uruchom aplikację pomocniczą ręcznie w interfejse GUI."
 
 #: oversteer/main.ui:2149
 msgid "Start application manually"
-msgstr "Arrancar la aplicación manualmente"
+msgstr "Włącz aplikację ręcznie"
 
 #: oversteer/main.ui:2185
 msgid ""
 "Enable wheel range settings in the window overlay. When set to auto, it will "
 "be displayed only when being set using the wheel buttons."
 msgstr ""
-"Activa los ajustes de rango de giro del volante en la ventana superpuesta. "
-"Cuando esté a auto se mostrará solo cuando esté modificándose usando los "
-"botones del volante."
+"Włącz ustawienia zakresu kierownicy w oknie nakładki. Gdy ustawione na 'auto', "
+"będzie wyświetlane tylko przy użyciu przycisków kierownicy."
 
 #: oversteer/main.ui:2193
 msgid "Wheel range display"
-msgstr "Mostrar rango de giro"
+msgstr "Wyświetl zakres kierownicy"
 
 #: oversteer/main.ui:2207
 msgid "Auto"
@@ -516,16 +513,16 @@ msgstr "Auto"
 
 #: oversteer/main.ui:2223
 msgid "Always"
-msgstr "Siempre"
+msgstr "Zawsze"
 
 #: oversteer/main.ui:2239
 msgid "Never"
-msgstr "Nunca"
+msgstr "Nigdy"
 
 #: oversteer/main.ui:2278
 msgid "Enable FFBmeter using the leds in the wheel or the window overlay."
 msgstr ""
-"Activa el FFBmeter usando los leds del volante o la ventana superpuesta."
+"Włącz FFBmeter używając ledów na kierownicy lub nakładki."
 
 #: oversteer/main.ui:2286
 msgid "FFBmeter"
@@ -533,43 +530,43 @@ msgstr "FFBmeter"
 
 #: oversteer/main.ui:2300
 msgid "Leds"
-msgstr "Leds"
+msgstr "Ledy"
 
 #: oversteer/main.ui:2314
 msgid "Overlay"
-msgstr "Superposición"
+msgstr "Nakładka"
 
 #: oversteer/main.ui:2351
 msgid ""
 "Use wheel buttons to control some wheel settings. The buttons must be "
 "defined in the preferences window."
 msgstr ""
-"Usa los botones del volante para controlar algunos ajustes del volante. Los "
-"botones se deben definir en la ventana de preferencias."
+"Użyj kierownicy do strrowania niektórymi ustawieniami kierownicy. Przyciski "
+"muszą zostać przypisane w zakładce preferencji."
 
 #: oversteer/main.ui:2359
 msgid "Enable wheel buttons"
-msgstr "Activar botones del volante"
+msgstr "Włącz przyciski na kierownicy"
 
 #: oversteer/main.ui:2402
 msgid "Tools"
-msgstr "Herramientas"
+msgstr "Narzędzia"
 
 #: oversteer/main.ui:2427
 msgid "Start new"
-msgstr "Empezar"
+msgstr "Zacznij nowe"
 
 #: oversteer/main.ui:2441
 msgid "Import CSV"
-msgstr "Importar CSV"
+msgstr "Importuj CSV"
 
 #: oversteer/main.ui:2455
 msgid "Export CSV"
-msgstr "Exportar CSV"
+msgstr "Eksportuj CSV"
 
 #: oversteer/main.ui:2469
 msgid "Open chart"
-msgstr "Abrir gráficas"
+msgstr "Otwórz wykres"
 
 #: oversteer/main.ui:2504
 msgid ""
@@ -577,10 +574,9 @@ msgid ""
 "Be careful when running the tests and follow the instructions as closely as "
 "possible for safety and valid results."
 msgstr ""
-"No hay datos de pruebas disponibles. Por favor, importa datos de pruebas o "
-"empieza una nueva prueba.\n"
-"Ten cuidado cuando ejecutas las pruebas y sigue las instrucciones tan "
-"exactamente como puedas por tu seguridad y para obtener resultados válidos."
+"Brak dostępnych danych. Proszę zimportować testowe dane lub rozpocząć nowy test.\n"
+"Zachowaj ostrożność gdy wykonujesz testy i podążaj za instrukcją tak dokładnie jak to "
+"możliwe ze względów bezpieczeństwa i poprawnych wyników."
 
 #: oversteer/main.ui:2519
 msgid "page1"
@@ -591,8 +587,8 @@ msgid ""
 "The lowest torque test measures the minimum force level that the wheel can "
 "deliver. Your help is required for this test."
 msgstr ""
-"La prueba de mínimo par motor mide el mínimo nivel de fuerza que el volante "
-"puede generar. Se necesita tu ayuda para esta prueba."
+"Test minimalnego momentu obrotowego keirownicy mierzy minimalny poziom siły "
+"jaką kierownica może dostarczyć. Twój udział jest niezbędny dla tego testu."
 
 #: oversteer/main.ui:2545
 msgid "page2"
@@ -600,7 +596,7 @@ msgstr ""
 
 #: oversteer/main.ui:2558
 msgid "The linearity test measures the linear force response."
-msgstr "La prueba de linealidad mide la linealidad de la fuerza."
+msgstr "Test liniowości mierzy odpowiedź siły liniowej."
 
 #: oversteer/main.ui:2571
 msgid "page5"
@@ -611,8 +607,7 @@ msgid ""
 "The step test measures several performance parameters at the highest force "
 "levels."
 msgstr ""
-"La prueba de pasos mide varios parámetros de rendimiento a los niveles de "
-"fuerza más altos."
+"Test stopniowy mierzy parę wydajności parametrów gdy poziom siły jest największy."
 
 #: oversteer/main.ui:2597
 msgid "page3"
@@ -621,7 +616,7 @@ msgstr ""
 #: oversteer/main.ui:2610
 msgid "The test is running, please, don't touch the wheel and wait."
 msgstr ""
-"Las pruebas se están ejecutando, por favor, no toques el volante y espera."
+"Test jest w trakcie, proszę nie dotykać kierownicy."
 
 #: oversteer/main.ui:2624
 msgid "page4"
@@ -629,47 +624,47 @@ msgstr ""
 
 #: oversteer/main.ui:2650
 msgid "Max. angular acceleration (RPM/s):"
-msgstr "Aceleración angular máx. (RPM/s):"
+msgstr "Maksymalne przyspieszenie kątowe (RPM/s):"
 
 #: oversteer/main.ui:2665
 msgid "Max. angular deceleration (RPM/s):"
-msgstr "Deceleración angular máx. (RPM/s):"
+msgstr "Maksymalne opóźnienie kątowe (RPM/s):"
 
 #: oversteer/main.ui:2680
 msgid "Mean angular acceleration (RPM/s):"
-msgstr "Aceleración angular media (RPM/s):"
+msgstr "Średnie przyspieszenie kątowe (RPM/s):"
 
 #: oversteer/main.ui:2695
 msgid "Residual angular deceleration (RPM/s):"
-msgstr "Deceleración angular residual (RPM/s):"
+msgstr "Szczątkowe opóźnienie kątowe (RPM/s):"
 
 #: oversteer/main.ui:2710
 msgid "Latency (ms):"
-msgstr "Latencia (ms):"
+msgstr "Opóźnienie (ms):"
 
 #: oversteer/main.ui:2725
 msgid "Min. force level (%):"
-msgstr "Nivel de fuerza mín. (%):"
+msgstr "Minimalny poziom siły (%):"
 
 #: oversteer/main.ui:2805
 msgid "Max. angular velocity (RPM):"
-msgstr "Velocidad angular máx. (RPM):"
+msgstr "Maksymalna prędkość kątowa. (RPM):"
 
 #: oversteer/main.ui:2820
 msgid "Mean angular deceleration (RPM/s):"
-msgstr "Deceleración angular media (RPM/s):"
+msgstr "Średnie opóźnienie kątowe (RPM/s):"
 
 #: oversteer/main.ui:2835
 msgid "Time to max. angular acceleration (ms):"
-msgstr "Tiempo para máx. aceleración angular (ms):"
+msgstr "Czas do maksymalnego przyspieszenia kątowego (ms):"
 
 #: oversteer/main.ui:2850
 msgid "Time to max. angular deceleration (ms):"
-msgstr "Tiempo para máx. deceleración angular (ms):"
+msgstr "Czas do maksymalnego opóźnienia kątowego (ms):"
 
 #: oversteer/main.ui:2865
 msgid "Estimated SNR (dB):"
-msgstr "SNR estimado (dB):"
+msgstr "Przybliżone SNR (dB):"
 
 #: oversteer/main.ui:2973
 msgid "page0"
@@ -681,19 +676,17 @@ msgid ""
 "your hands and move it slowly around its middle position. When you notice a "
 "slight resistance or pulsation press any button in the wheel."
 msgstr ""
-"Mientras dure esta prueba debes mantener tus manos firmemente en el volante "
-"y girarlo lentamente cerca de su posición central. Cuando notes una ligera "
-"resistencia o pulsación pulsa cualquier botón del volante."
+"Podczas trwania testu musisz mocno trzymać kierownicę i powoli poruszać nią"
+"dopóki nie wyczuje się oporu lub pulsacji. Wtedy proszę nacisnąć dowolny przycisk "
 
 #: oversteer/main.ui:3001
 msgid "Press any wheel button when ready to start the test."
 msgstr ""
-"Pulsa cualquier botón del volante cuando estés preparado para empezar la "
-"prueba."
+"Naciśnij dowolny przycisk by rozpocząć test."
 
 #: oversteer/main.ui:3015
 msgid "Now running the test."
-msgstr "Ejecutando la prueba."
+msgstr "Rozpoczęto test."
 
 #: oversteer/main.ui:3028
 msgid "page6"
@@ -704,139 +697,140 @@ msgid ""
 "WARNING: Don't touch the wheel and leave a clear space around it to avoid "
 "accidents or unreliable results."
 msgstr ""
-"ADVERTENCIA: No toques el volante y deja espacio libre alrededor para evitar "
-"accidentes o resultados erróneos."
+"OSTRZEŻENIE: Nie dotykaj kierownicy i zostaw miejsce wokół by uniknąć incydentów "
+"lub nierzetelnych wyników."
 
 #: oversteer/main.ui:3065
 msgid "Back"
-msgstr "Atrás"
+msgstr "Wróć"
 
 #: oversteer/main.ui:3079
 msgid "Run"
-msgstr "Empezar"
+msgstr "Zacznij"
 
 #: oversteer/main.ui:3113
 msgid "Tests"
-msgstr "Pruebas"
+msgstr "Testy"
 
 #: oversteer/main.ui:3192
 msgid "New"
-msgstr "Nuevo"
+msgstr "Nowy"
 
 #: oversteer/main.ui:3206
 msgid "Rename"
-msgstr "Renombrar"
+msgstr "Zmień nazwę"
 
 #: oversteer/main.ui:3220
 msgid "Delete"
-msgstr "Borrar"
+msgstr "Usuń"
 
 #: oversteer/main.ui:3234
 msgid "Import"
-msgstr "Importar"
+msgstr "Importuj"
 
 #: oversteer/main.ui:3248
 msgid "Export"
-msgstr "Exportar"
+msgstr "Eksportuj"
 
 #: oversteer/main.ui:3276
 msgid "Profiles"
-msgstr "Perfiles"
+msgstr "Profile"
 
 #: oversteer/main.ui:3292
 msgid "Start Application"
-msgstr "Arrancar aplicación"
+msgstr "Uruchom aplikację"
 
 #: oversteer/main.ui:3343
 msgid "Re-scan wheel devices and update window."
-msgstr "Vuelve a buscar dispositivos que sean volantes y actualiza la ventana."
+msgstr "Przeskanuj dostępne urządzenia jeszcze raz i zaktualizuj okno."
 
 #: oversteer/main.ui:3403
 msgid "Oversteer preferences"
-msgstr "Preferencias de Oversteer"
+msgstr "Preferencje Oversteer"
 
 #: oversteer/main.ui:3433
 msgid ""
 "Check permissions to read/write device settings and propose changes to make "
 "them available to normal users."
 msgstr ""
-"Comprobar los permisos de lectura/escritura para los ajustes del dispositivo "
-"y proponer cambios para hacerlos accesibles a usuarios normales."
+"Sprawdź uprawnienia do odczytu/zapisu ustawień urządzenia i zmień je by "
+"były dostępne dla zwykłego użytkownika."
 
 #: oversteer/main.ui:3441
 msgid "Check permissions"
-msgstr "Comprobar permisos"
+msgstr "Sprawdź uprawnienia"
 
 #: oversteer/main.ui:3473
 msgid ""
 "Change the interface language. You'll need to restart the application to "
 "apply."
 msgstr ""
-"Cambia el idioma de la interfaz. Se aplicará al reiniciar la aplicación."
+"Zmień język interfejsu. Bedziesz musiał zrestartować aplikację "
+"by zastosować zmiany."
 
 #: oversteer/main.ui:3481
 msgid "Language"
-msgstr "Idioma"
+msgstr "Język"
 
 #: oversteer/main.ui:3512
 msgid ""
 "Pressing start will begin configuration of wheel buttons. Just press the "
 "button in the wheel that you want to use for every displayed action."
 msgstr ""
-"Pulsando Empezar se iniciará la configuración de botones del volante. Pulsa "
-"el botón del volante que quieras usar para cada acción que se muestre."
+"Wciśniecie start rozpocznie konfigurację przycisków kierownicy. Naciśnij przycisk "
+"na kierownicy który chcesz przypisać do akcji."
 
 #: oversteer/main.ui:3518
 msgid "Define buttons"
-msgstr "Definir botones"
+msgstr "Przypisz przyciski"
 
 #: oversteer/main.ui:3528
 msgid "Start"
-msgstr "Empezar"
+msgstr "Start"
 
 #: oversteer/combined_chart.py:15
 msgid "Linear response test"
-msgstr "Prueba de respuesta lineal"
+msgstr "Test odpowiedzi liniowej"
 
 #: oversteer/combined_chart.py:16 oversteer/combined_chart.py:25
 msgid "Input force"
-msgstr "Fuerza solicitada"
+msgstr "Siła wejściowa"
 
 #: oversteer/combined_chart.py:17
 msgid "Output force"
-msgstr "Fuerza generada"
+msgstr "Siła wyjściowa"
 
 #: oversteer/combined_chart.py:18
 msgid "Force level"
-msgstr "Nivel de fuerza"
+msgstr "Poziom siły"
 
 #: oversteer/combined_chart.py:24
 msgid "Step test (angular velocity + position)"
-msgstr "Prueba de pasos (velocidad angular + posición)"
+msgstr "Test stopniowy (prędkość kątowa + pozycja)"
 
 #: oversteer/combined_chart.py:26
 msgid "Angular displacement (raw)"
-msgstr "Desplazamiento angular (bruto)"
+msgstr "Kątowe przemieszczenie (surowe)"
 
 #: oversteer/combined_chart.py:27
 msgid "Angular displacement (smoothed)"
-msgstr "Desplazamiento angular (suavizado)"
+msgstr "Kątowe przemieszczenie (wygładzone)"
 
 #: oversteer/combined_chart.py:28
 msgid "Angular velocity (raw)"
-msgstr "Velocidad angular (bruto)"
+msgstr "Prędkość kątowa (surowa)"
 
 #: oversteer/combined_chart.py:29
 msgid "Angular velocity (smoothed)"
-msgstr "Velocidad angular (suavizado)"
+msgstr "Prędkość kątowa (wygładzona)"
 
 #: oversteer/combined_chart.py:30 oversteer/combined_chart.py:42
 msgid "Time (s)"
-msgstr "Tiempo (s)"
+msgstr "Czas (s)"
 
 #: oversteer/combined_chart.py:31
 msgid "Position"
-msgstr "Posición"
+msgstr "Pozycja"
 
 #: oversteer/combined_chart.py:32
 msgid "RPM"
@@ -844,19 +838,19 @@ msgstr "RPM"
 
 #: oversteer/combined_chart.py:38
 msgid "Step test (angular acceleration)"
-msgstr "Prueba de pasos (aceleración angular)"
+msgstr "Test stopniowy (przyspieszenie kątowe)"
 
 #: oversteer/combined_chart.py:39
 msgid "Input Force"
-msgstr "Fuerza solicitada"
+msgstr "Siła Wejściowa"
 
 #: oversteer/combined_chart.py:40
 msgid "Angular acceleration (raw)"
-msgstr "Aceleración angular (bruto)"
+msgstr "Przyspieszenie kątowe (surowe)"
 
 #: oversteer/combined_chart.py:41
 msgid "Angular acceleration (smoothed)"
-msgstr "Aceleración angular (suavizado)"
+msgstr "Przyspieszenie kątowe (wygładzone)"
 
 #: oversteer/combined_chart.py:43
 msgid "RPM/s"
@@ -864,56 +858,58 @@ msgstr "RPM/s"
 
 #: oversteer/combined_chart.py:49
 msgid "Latency = {:.0f} ms"
-msgstr "Latencia = {:.0f} ms"
+msgstr "Opóźnienie = {:.0f} ms"
 
 #: oversteer/combined_chart.py:50
 msgid "Max. velocity = {:.0f} RPM"
-msgstr "Velocidad máx. = {:.0f} RPM"
+msgstr "Prędkość maks. = {:.0f} RPM"
 
 #: oversteer/combined_chart.py:51
 msgid "Mean accel. = {:.0f} RPM/s"
-msgstr "Acel. media = {:.0f} RPM/s"
+msgstr "Przyśp. średnie = {:.0f} RPM/s"
 
 #: oversteer/combined_chart.py:52
 msgid "Mean decel. = {:.0f} RPM/s"
-msgstr "Decel. media = {:.0f} RPM/s"
+msgstr "Opóźn. średnie = {:.0f} RPM/s"
 
 #: oversteer/combined_chart.py:53
 msgid "Max. accel. = {:.0f} RPM/s"
-msgstr "Acel. máx. = {:.0f} RPM/s"
+msgstr "Przyśp. maks. = {:.0f} RPM/s"
 
 #: oversteer/combined_chart.py:54
 msgid "Time max. accel. = {:.0f} ms"
-msgstr "Tiempo acel. máx. = {:.0f} ms"
+msgstr "Czas maks. przyśp. = {:.0f} ms"
 
 #: oversteer/combined_chart.py:55
 msgid "Max. decel. = {:.0f} RPM/s"
-msgstr "Decel. máx. = {:.0f} RPM/s"
+msgstr "Opóźn. maks. = {:.0f} RPM/s"
 
 #: oversteer/combined_chart.py:56
 msgid "Time max. decel. = {:.0f} ms"
-msgstr "Tiempo decel. máx. = {:.0f} ms"
+msgstr "Czas opóźn. maks. = {:.0f} ms"
 
 #: oversteer/combined_chart.py:57
 msgid "Residual decel. = {:.0f} RPM/s"
-msgstr "Decel. residual = {:.0f} RPM/s"
+msgstr "Cząstkowe opóźn. = {:.0f} RPM/s"
 
 #: oversteer/combined_chart.py:58
 msgid "Estimated SNR = {:.0f} dB"
-msgstr "SNR estimado = {:.0f} dB"
+msgstr "Przybliżone SNR = {:.0f} dB"
 
 #: oversteer/combined_chart.py:59
 msgid "Min. force level = {:.1f} %"
-msgstr "Nivel de fuerza mín. = {:.1f} %"
+msgstr "Min. poziom siły = {:.1f} %"
 
 #: data/org.berarma.Oversteer.desktop.in:4
 msgid "Steering Wheel Manager"
-msgstr "Configurador de volantes"
+msgstr "Menadźer Kierownicy"
 
 #: data/org.berarma.Oversteer.desktop.in:12
 msgid "game;racing;cars;wheels"
-msgstr "juego;carreras;coches;volantes"
+msgstr "gra;wyścigi;auta;kierownice;"
 
+#~ rest of the translation is commented in spanish section,
+#~ so I'm not sure if it's needed to translate.
 #~ msgid "org.berarma.Oversteer"
 #~ msgstr "org.berarma.Oversteer"
 
