--- a/po/pl.po
+++ b/po/pl.po
@@ -26,7 +26,7 @@ msgstr "Oversteer - Menadżer kierownic"
 
 #: oversteer/application.py:27
 msgid "Run as command's companion"
-msgstr ""
+msgstr "Uruchom jako komendę pomocniczą"
 
 #: oversteer/application.py:28
 msgid "Device path"
@@ -419,7 +419,7 @@ msgstr "Przyśp."
 
 #: oversteer/main.ui:884
 msgid "Hat"
-msgstr "Limit"
+msgstr "Hat"
 
 #: oversteer/main.ui:1024
 msgid "Buttons"
