--- a/po/hu.po
+++ b/po/hu.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: oversteer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-11-14 08:14+0100\n"
-"PO-Revision-Date: 2023-11-14 08:51+0100\n"
+"PO-Revision-Date: 2023-11-14 08:55+0100\n"
 "Last-Translator: Kálmán „KAMI” Szalai <kami911@gmail.com>\n"
 "Language-Team: \n"
 "Language: hu_HU\n"
@@ -322,11 +322,11 @@ msgstr "Oversteer"
 
 #: oversteer/main.ui:291
 msgid "Speed test"
-msgstr "Sebességteszt"
+msgstr "Sebesség vizsgálat"
 
 #: oversteer/main.ui:295
 msgid "Curve test"
-msgstr "Kanyarteszt"
+msgstr "Kanyar vizsgálat"
 
 #: oversteer/main.ui:329
 msgid "Select the wheel controller you want to configure."
@@ -587,9 +587,9 @@ msgid ""
 "Be careful when running the tests and follow the instructions as closely as "
 "possible for safety and valid results."
 msgstr ""
-"Nem állnak rendelkezésre vizsgálati adatok. Kérjük, importáljon "
-"tesztadatokat vagy indítson új tesztet.\n"
-"Legyen óvatos a tesztek futtatásakor, és a biztonság és az érvényes "
+"Nem állnak rendelkezésre vizsgálati adatok. Kérjük, importáljon vizsgálati "
+"adatokat vagy indítson egy új vizsgálatot.\n"
+"Legyen óvatos a vizsgálatok futtatásakor, és a biztonság és az érvényes "
 "eredmények érdekében a lehető legpontosabban kövesse az utasításokat."
 
 #: oversteer/main.ui:2640
@@ -602,7 +602,7 @@ msgid ""
 "deliver. Your help is required for this test."
 msgstr ""
 "A legalacsonyabb nyomatékvizsgálat azt a minimális erőszintet méri, amelyet "
-"a kerék képes kifejteni. Ehhez a teszthez az Ön segítségére van szükség."
+"a kerék képes kifejteni. Ehhez a vizsgálathoz az Ön segítségére van szükség."
 
 #: oversteer/main.ui:2666
 msgid "page2"
@@ -610,7 +610,7 @@ msgstr "oldal2"
 
 #: oversteer/main.ui:2679
 msgid "The linearity test measures the linear force response."
-msgstr "A linearitás vizsgálat a lineáris erőreakciót méri."
+msgstr "A linearitás vizsgálat az arányos erőreakciót méri."
 
 #: oversteer/main.ui:2692
 msgid "page5"
@@ -689,9 +689,9 @@ msgid ""
 "your hands and move it slowly around its middle position. When you notice a "
 "slight resistance or pulsation press any button in the wheel."
 msgstr ""
-"A teszt időtartama alatt a kormánykereket erősen tartsa, és lassan mozgassa "
-"a középső állás körül. Amikor enyhe ellenállást vagy lüktetést észlel, "
-"nyomja meg a kormánykerék bármelyik gombját."
+"A vizsgálat időtartama alatt a kormánykereket erősen tartsa, és lassan "
+"mozgassa a középső állás körül. Amikor enyhe ellenállást vagy lüktetést "
+"észlel, nyomja meg a kormánykerék bármelyik gombját."
 
 #: oversteer/main.ui:3122
 msgid "Press any wheel button when ready to start the test."
@@ -701,7 +701,7 @@ msgstr ""
 
 #: oversteer/main.ui:3136
 msgid "Now running the test."
-msgstr "Éppen tesztelés történik."
+msgstr "Éppen vizsgálat történik."
 
 #: oversteer/main.ui:3149
 msgid "page6"
@@ -725,7 +725,7 @@ msgstr "Futtatás"
 
 #: oversteer/main.ui:3234
 msgid "Tests"
-msgstr "Tesztek"
+msgstr "Vizsgálatok"
 
 #: oversteer/main.ui:3313
 msgid "New"
